--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -12,6 +12,7 @@
     "com.unity.purchasing": "4.9.3",
     "com.unity.recorder": "3.0.3",
     "com.unity.render-pipelines.universal": "14.0.8",
+    "com.unity.services.analytics": "5.0.2",
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.6",
     "com.unity.timeline": "1.7.4",
